# Mazic

./: .gitignore  Makefile  README.md  Setup.iss  compile.bat  pyproject.toml  requirements.txt
assets/: Rooms.tiled-session  training_map..tmj
assets/frames/: Base.tsx
assets/maps/: MazeGenerator.ipynb  maze.csv  training-map.tiled-session  training_map..tmj  training_map._Calque de Tuiles 1.csv  training_map._Calque de Tuiles 2.csv  training_map.tmx  training_map_project.tsx
assets/room_csv/: Base.tsx  Room 1._Murs.csv  Room 1._Sol.csv  Room 1.tmx  room_1.tmx  room_1_Floors.csv  room_1_Objects.csv  room_1_Walls.csv
doc/: search.js  src.html
doc/src/: AssetManager.html  Camera.html  Config.html  Entities.html  EntityManager.html  EventManager.html  Logger.html  Mazic.html  main.html
doc/src/Entities/: Character.html  Projectile.html
src/: AssetManager.py  Camera.py  Character.py  Config.py  EntityManager.py  EventManager.py  Logger.py  Maze.py  MazeGenerator.py  Mazic.py  Room.py  main.py
src/Entities/: Character.py  Debug.py  Projectile.py
src/Entities/Invisible/: VisionLine.py
src/Entities/Maze/: Floor.py  Wall.py
src/Entity/: Character.py  Projectile.py
src/EntityPlugins/: AbilityManager.py  Health.py
src/utils/: is_in_triangle.py
